New Project added

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ I am proficient in maintaining existing programs with the implementation of new 
             <div class="work-box">
               <a href="sub800.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img style="height: 200px" src="assets/img/Home-Page.jpg">
+                  <img style="height: 218px" src="assets/img/Home-Page.jpg">
                 </div>
               </a>
               <div class="work-content">
@@ -393,6 +393,31 @@ I am proficient in maintaining existing programs with the implementation of new 
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="sub800.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="ecommerce.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img style="height: 218px" src="assets/img/shopngo.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">ShopNGo</h2>
+                    <i>Feel free to shop at ShopNGo</i>
+                    <div class="w-more">
+                      <span class="w-ctegory"><a href="https://laravel.com/">Laravel</a></span> / <span class="w-date">1 jan. 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="ecommerce.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -471,31 +496,30 @@ I am proficient in maintaining existing programs with the implementation of new 
               </div>
             </div>
           </div>
-       <!--   <div class="col-md-4">
+          <div class="col-md-4">
             <div class="work-box">
-              <a href="index.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="portfolio-details2.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img style="height: 218px" src="https://wallpaperaccess.com/full/5652018.jpg" alt="" class="img-fluid">
+                  <img style="height: 220px" src="https://img.mlo-online.com/files/base/ebm/mlo/image/2015/10/MLO_Generic_LabManagement.png?auto=format&dpr=2&w=720" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Portfolio</h2>
+                    <h2 class="w-title">Lab Management</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">11 feb. 2024</span>
+                      <span class="w-ctegory">Java</span> / <span class="w-date">21 july. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="index.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details2.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div> -->
-    
+          </div>
 
         </div>
       </div>
