--- a/index.html
+++ b/index.html
@@ -428,14 +428,14 @@ I am proficient in maintaining existing programs with the implementation of new 
             <div class="work-box">
               <a href="converter.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img style="height: 218px" src="assets/img/convert.jpg" alt="" class="img-fluid">
+                  <img style="height: 218px; width: 360px;" src="assets/img/convert.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">Online Converter Tool</h2>
-                    <i>A easy tool to convert images and optimize media in few clicks.</i>
+                    <i>A easy tool to optimize media in few clicks.</i>
                     <div class="w-more">
                       <span class="w-ctegory"><a href="https://laravel.com/">Laravel</a></span> / <span class="w-date">10 April 2024</span>
                     </div>
