--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ I am proficient in maintaining existing programs with the implementation of new 
           </div>
         <div class="col-md-4">
             <div class="work-box">
-              <a href="converter.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="convert.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img style="height: 218px; width: 360px;" src="assets/img/convert.jpg" alt="" class="img-fluid">
                 </div>
@@ -442,7 +442,7 @@ I am proficient in maintaining existing programs with the implementation of new 
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="converter.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="convert.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
