--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#experience">Experience</a></li>
           <li><a class="nav-link scrollto " href="#work">Projects</a></li>
-          <li><a class="btn btn-primary p-2" href="2025 Ravi Rajpoot CV.pdf">Download CV</a></li>
+          <li><a class="btn btn-primary p-2" href="Ravi Rajpoot.pdf">Download CV</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -374,6 +374,31 @@ I am proficient in maintaining existing programs with the implementation of new 
           </div>
         </div>
         <div class="row">
+	<div class="col-md-4">
+            <div class="work-box">
+              <a href="sub800.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img style="height: 218px" src="assets/img/Home-Page.jpg">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">ShareDrop</h2>
+                    <i>Quick File Sharing Across Devices</i>
+                    <div class="w-more">
+                      <span class="w-ctegory"><a href="https://laravel.com/">Laravel</a></span> / <span class="w-date">2 June 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="sharedrop.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-md-4">
             <div class="work-box">
               <a href="sub800.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
