--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@ I am proficient in maintaining existing programs with the implementation of new 
         <div class="row">
 	<div class="col-md-4">
             <div class="work-box">
-              <a href="sub800.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="sharedrop.html" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img style="height: 218px" src="assets/img/Home-Page.jpg">
+                  <img style="height: 218px" src="assets/img/share.jpg">
                 </div>
               </a>
               <div class="work-content">
