--- a/index.html
+++ b/index.html
@@ -251,6 +251,32 @@ I am proficient in maintaining existing programs with the implementation of new 
               </div>
             </div>
           </div>
+	<div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="fa-solid fa-gears"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">REST APIs</h2>
+                <p class="s-description text-center">
+               <!-- Write here -->
+                </p>
+              </div>
+            </div>
+          </div>
+	<div class="col-md-3">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="fa-brands fa-github"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">GITHUB</h2>
+                <p class="s-description text-center">
+               <!-- Write here -->
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section><!-- End Services Section -->
