--- a/index.html
+++ b/index.html
@@ -598,6 +598,43 @@ I am proficient in maintaining existing programs with the implementation of new 
           </div>
 
         </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Ai Helped Projects
+              </h3>
+              <p class="subtitle-a">
+                Projects I have done with the help of AI.
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="work-box">
+              <a href="javascript:void(0)">
+                <div class="work-img">
+                  <img style="height: 220px; width: -webkit-fill-available;" src="assets/img/snake.png" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Snake Vs Mouse Game!</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Javascript</span> / <span class="w-date">14 july 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a target="_blank" class="btn play-btn btn-primary" href="snake-mouse-game.html">Play</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section><!-- End Portfolio Section -->
 
