--- a/index.html
+++ b/index.html
@@ -156,164 +156,283 @@ I am proficient in maintaining existing programs with the implementation of new 
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services-mf pt-5 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                Technologies
-              </h3>
-              <p class="subtitle-a">
-                 Technologies I have worked with
-              </p>
-              <div class="line-mf"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-php"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">PHP</h2>
-                <p class="s-description text-center">
-                  <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-laravel"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Laravel</h2>
-                <p class="s-description text-center">
-                   <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-free-code-camp"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">CodIgniter</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-           <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa fa-code" aria-hidden="true"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">J Query</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-            <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-js"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">JAVASCRIPT</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-            <div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-solid fa-database"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">MY SQL</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-	<div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-solid fa-gears"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">REST APIs</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
-	<div class="col-md-3">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-github"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">GITHUB</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
-          </div>
+<!-- ======= Services Section ======= -->
+<section id="services" class="services-mf pt-5 route">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="title-box text-center">
+          <h3 class="title-a">Technologies</h3>
+          <p class="subtitle-a">Technologies I have worked with</p>
+          <div class="line-mf"></div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </div>
 
-    <!-- ======= Experience Section ======= -->
-    <section id="experience" class="experience-mf pt-5 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                Experience
-              </h3>
-              <p class="subtitle-a">
-                 Company I have worked with
-              </p>
-              <div class="line-mf"></div>
-            </div>
+    <div class="row">
+      <!-- PHP -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-php"></i></span>
           </div>
-        </div>
-        <div class="row justify-content-center">
-           <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="fa-brands fa-weebly"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title">Webvire Software Solutions</h2>
-                <p class="s-description text-center">
-               <!-- Write here -->
-                </p>
-              </div>
-            </div>
+          <div class="service-content">
+            <h2 class="s-title">PHP</h2>
+            <p class="s-description text-center">
+              Developed dynamic web applications using core PHP and MVC structure with clean, modular code.
+            </p>
           </div>
         </div>
       </div>
-    </section><!-- End Experience Section -->
+
+      <!-- Laravel -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-laravel"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Laravel</h2>
+            <p class="s-description text-center">
+              Built full-stack Laravel apps including APIs, authentication, database design, and blade templating.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CodeIgniter -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-free-code-camp"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">CodeIgniter</h2>
+            <p class="s-description text-center">
+              Created lightweight, high-performance applications using CodeIgniter with custom modules.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- jQuery -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa fa-code" aria-hidden="true"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">jQuery</h2>
+            <p class="s-description text-center">
+              Used jQuery for DOM manipulation, animations, and AJAX requests to enhance UI interactivity.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- JavaScript -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-js"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">JavaScript</h2>
+            <p class="s-description text-center">
+              Implemented client-side logic, form validation, and event-driven programming.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- MySQL -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-solid fa-database"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">MySQL</h2>
+            <p class="s-description text-center">
+              Designed and optimized relational databases and complex queries for scalable web apps.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- REST APIs -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-solid fa-gears"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">REST APIs</h2>
+            <p class="s-description text-center">
+              Developed and consumed RESTful APIs for seamless integration between frontend and backend systems.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- GitHub -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-github"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">GitHub</h2>
+            <p class="s-description text-center">
+              Used Git and GitHub for version control, team collaboration, and code deployment.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- HTML5 -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-html5"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">HTML5</h2>
+            <p class="s-description text-center">
+              Created semantic, accessible, and SEO-friendly web pages using HTML5 best practices.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- CSS3 & Bootstrap -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-css3-alt"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">CSS3 & Bootstrap</h2>
+            <p class="s-description text-center">
+              Designed responsive and mobile-first UIs using CSS3, Bootstrap 5, and utility classes.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- AJAX -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-solid fa-arrows-rotate"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">AJAX</h2>
+            <p class="s-description text-center">
+              Enhanced user experience with asynchronous data loading and real-time updates using AJAX.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Vue.js -->
+   <!---   <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-vuejs"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Vue.js</h2>
+            <p class="s-description text-center">
+              Built dynamic components and reactive UIs using Vue 3 with Vue Router and Vuex integration.
+            </p>
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Postman -->
+      <div class="col-md-3">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-solid fa-flask"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Postman</h2>
+            <p class="s-description text-center">
+              Tested and documented APIs effectively using Postman collections and automation features.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- End Services Section -->
+
+
+<!-- ======= Experience Section ======= -->
+<section id="experience" class="experience-mf pt-5 route">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="title-box text-center">
+          <h3 class="title-a">Experience</h3>
+          <p class="subtitle-a">Companies I have worked with</p>
+          <div class="line-mf"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <!-- Webvire Experience -->
+      <div class="col-md-4">
+        <div class="service-box-experience">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-weebly"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Webvire Software Solutions</h2>
+            <p class="s-description text-center">
+              Working as a PHP/Laravel Developer since February 2024. Gained experience in backend development, API integration, and working on real-time CRM and SaaS-based applications.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Internship Experience -->
+      <div class="col-md-4">
+        <div class="service-box-experience">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-solid fa-code"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Analyze Infotech (Internship)</h2>
+            <p class="s-description text-center">
+              Completed a 6-month internship focused on PHP development. Worked on dynamic websites, learned fundamentals of server-side scripting, and built mini-projects under mentorship.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Summer Training -->
+      <div class="col-md-4">
+        <div class="service-box-experience">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="fa-brands fa-java"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Analyze Infotech (Summer Training)</h2>
+            <p class="s-description text-center">
+              Successfully completed 6 months of summer training in Java. Learned object-oriented programming, JDBC, and basic GUI application development.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section><!-- End Experience Section -->
+
 
 
     <!-- ======= Counter Section ======= -->
